2006-10-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/beam.cc (set_stem_lengths): do set_stemend for invisible
	stems too. Fixes #5

	* lily/parenthesis-engraver.cc (acknowledge_grob): set parent of
	parenthesis item. This fixes premature Y-extent triggering. Fixes
	issue #95. 
 
	* VERSION (PATCH_LEVEL): bump version.

2006-10-04  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/advanced-notation.itely: added
	info about instrument names for piano or other contexts,
	thanks Marcus!

2006-10-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* mf/feta-bolletjes.mf (solfa_quarter_width): use
	solfa_base_notewidth as unit for non-DO-notes too.

	* input/mutopia/W.A.Mozart/mozart-hrn-3.ly: update email.

	* VERSION: release 2.9.21

	* Documentation/topdocs/NEWS.tely (Top): simpler, more clearer
	override.

2006-10-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* python/lilylib.py (progress): Minor fix.

2006-10-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/note-name-engraver.cc: doc engraver.

	* scm/output-lib.scm (hairpin::calc-grow-direction): new function.

	* lily/dynamic-engraver.cc (process_music): don't set grow-direction.

	* scm/define-grobs.scm (all-grob-descriptions): calc duration-log
	by callback.

	* lily/stem-engraver.cc (make_stem): don't set duration-log

	* scripts/lilypond-book.py (Lilypond_file_snippet.my_system):
	write snippet-names binary.

	* python/lilylib.py (system): use os.system for mingw32

	* scripts/lilypond-book.py (bindir): use os.pathsep for prepending
	to $PATH.

	* scm/backend-library.scm: update email address.

	* Documentation/topdocs/NEWS.tely (Top): add duration-log override
	example.

	* scm/define-grobs.scm (all-grob-descriptions): use callback to
	calc dot count.

	* lily/dots-engraver.cc (class Dots_engraver): new engraver:
	handle dot creation separately.

	* lily/tab-note-heads-engraver.cc (process_music): idem.

	* lily/drum-note-engraver.cc (process_music): idem.
