@@ -1,5 +1,8 @@
 2006-10-05  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* lily/completion-note-heads-engraver.cc (process_music): don't
+	skimp on memory usage.
+
 	* lily/beam.cc (set_stem_lengths): do set_stemend for invisible
 	stems too. Fixes #5
 
